# scalapack

./: .gitignore  CMakeLists.txt
TESTING/EIG/: CMakeLists.txt
TESTING/LIN/: CMakeLists.txt
